--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 			<li>Press start to be given a random number at the start of the game.<span>"Number To Get"</span></li>
 			<li>There are four characters below.</li>
 			<ul>
-				<li id="blue">Blue</li>
-				<li id="green">Green</li>
-				<li id="red">Red</li>
-				<li id="yellow">Yellow</li>
+				<li id="blue">Blue Boba</li>
+				<li id="green">Green Falcon</li>
+				<li id="red">Red Vader</li>
+				<li id="yellow">Yellow ATAT</li>
 			</ul>
 			<li>By clicking on a character, you will add a specific amount of points to your total score.</li>
 			<li>You win the game by matching your total score to the random number.</li>
@@ -34,7 +34,7 @@
 
 	<div class="numberToMatch">
 		<h2>Number To Match:
-			<span id= "randomNumber"></span>
+			<span id="randomNumber"></span>
 		</h2>
 	</div>
 
@@ -58,11 +58,6 @@
 	<div class="userTotal">
 		<h2>Your total score is:
 			<span id="finalTotal"></span>
-		</h2>
-	</div>
-
-	<div class="resetGame">
-		<button id="resetButton">PLAY AGAIN</button>
 		</h2>
 	</div>
 
